apps/qwen3.8-27b/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: qwen3.8-27b
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/instance: qwen3.8-27b
    app.kubernetes.io/name: qwen3.8-27b
  ports:
    - name: http
      port: 8000
      targetPort: http
